syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.anubhav.grpc";

service UrgentOrderService {
  rpc InvokeUrgentOrder(UrgentRequest) returns (UrgentResponse) {};
}

message UrgentRequest {
  int32 bloodType = 1;
  float quantity = 2;
}

message UrgentResponse {
  bool hasEnough = 1;
}